@startuml StorageClassDiagram
skinparam classAttributeIconSize 0
skinparam style strictuml

class Storage {
    +DEFAULT_STORAGE_FOLDERPATH: String
    +DEFAULT_STORAGE_FILEPATH: String
    +filePath: String

    +Storage(String)
    +saveStudentList(StudentDatabase): void
    +loadStudentList(): ArrayList~Student~

    -isValidPath(String): boolean
    -decodeLineToStudent(String): Student
    -parseModules(String): List~Module~
    -nullOrTrimmed(String): String
}

class StudentDatabase {
    +getAllStudents(): List~Student~
}

class Student {
    +toString(): String
    +getModules(): List~Module~
}

class Module {
    +Module(String, Grade)
    +Module(String, Grade, int)
}

class Grade {
    +fromString(String): Grade
}

class StorageException {
    +StorageException(String)
}

' Relationships
Storage "1" --> "1" StudentDatabase : saves/loads
Storage "1" --> "0..*" Student : processes
Storage "1" --> "0..*" Module : parses
Storage  -->  Grade : uses

Storage  ..>  StorageException : throws
Storage  ..>  IOException : throws

@enduml
